[gd_scene load_steps=8 format=3 uid="uid://o85mb280buhu"]

[ext_resource type="Script" uid="uid://dfsl5i4qfxqcw" path="res://scripts/exit.gd" id="1_qwi2f"]
[ext_resource type="Texture2D" uid="uid://cnfboe4d0p2wo" path="res://assets/sprites/npc/arrow.png" id="2_s6fab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sspvn"]
size = Vector2(10, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcwmf"]
size = Vector2(4, 3.55556)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpyoa"]
size = Vector2(7.92593, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4bp4"]
size = Vector2(5.77778, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_woxlu"]
size = Vector2(4.03704, 3.88889)

[node name="Exit" type="StaticBody2D"]
scale = Vector2(3, 3)
collision_layer = 2
script = ExtResource("1_qwi2f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_sspvn")

[node name="Arrow" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(-7.62939e-06, -16.6667)
scale = Vector2(0.708333, 0.708333)
texture = ExtResource("2_s6fab")

[node name="Down" type="Area2D" parent="."]
scale = Vector2(3, 3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
position = Vector2(0, 2.33333)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_pcwmf")

[node name="Right" type="Area2D" parent="."]
scale = Vector2(3, 3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(-0.111111, -1)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_dpyoa")

[node name="Left" type="Area2D" parent="."]
scale = Vector2(3, 3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(0.333333, -1)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_r4bp4")

[node name="Up" type="Area2D" parent="."]
scale = Vector2(3, 3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2(0.0555557, -3.83333)
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_woxlu")

[connection signal="body_entered" from="Down" to="." method="_on_down_body_entered"]
[connection signal="body_exited" from="Down" to="." method="_on_any_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_any_body_exited"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_any_body_exited"]
[connection signal="body_entered" from="Up" to="." method="_on_up_body_entered"]
[connection signal="body_exited" from="Up" to="." method="_on_any_body_exited"]
